# mobile-vis

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  README.md  bump_version.sh  index.html  pyproject.toml  requirements.txt  sitecustomize.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android-ci.yml  android.yml  nightly-benchmark.yml  pr-lite-benchmark.yml  preflight.yml  python-ci.yml  python.yml  version-bump-main.yml
android/: build.gradle.kts  gradle.properties  gradlew  gradlew.bat  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/debug/: output-metadata.json
android/app/flavor_A1/release/: output-metadata.json
android/app/release/: output-metadata.json
android/app/src/main/: AndroidManifest.xml
android/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
benchmarks/: .gitignore  vo_planes_baseline.json  vo_planes_pr_lite_baseline.json
docs/: android-signing.md  architecture-review.md  benchmarking.md  index.html  index.md  issues-checklist.md  roadmap.md  testing.md
notebooks/: example_analysis.ipynb
scripts/: benchmark_vo_planes.py  check.sh  export_mobile_models.py  robot_perception_measure_tracking.py  robot_perception_replay_mp4.py  smoke_perf.py
src/image_analysis/: __init__.py  april_tags.py  backends.py  benchmarking.py  calibration.py  cctag.py  classification.py  cli.py  detection.py  detector_common.py  effects.py  holistic.py  hologram.py  iris.py  planes.py  preprocessing.py  qr_detection.py  robot_perception.py  rtmdet.py  types.py  utils.py  versioning.py  yolo.py
tests/: conftest.py  test_april_tags.py  test_benchmarking.py  test_calibration.py  test_cctag.py  test_classification.py  test_detection.py  test_detector_common.py  test_effects.py  test_holistic.py  test_hologram.py  test_iris.py  test_package_init.py  test_planes.py  test_preprocessing.py  test_public_api.py  test_qr_detection.py  test_robot_perception.py  test_rtmdet.py  test_utils.py  test_versioning_cli.py  test_yolo.py
(+102 files in other folders)
