[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-analysis"
version = "0.1.0"
description = "Template for Python image analysis projects"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "Pillow>=10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# ruff – linting and formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hints)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]  # relax annotation requirements in tests

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# mypy – static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest – testing
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/image_analysis"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
